# ImageNodeEditor

./: .gitignore  CMakeLists.txt  README.md  analysis_document.md  build_release.bat  generate_doc.py  main.sln  run.bat  sample_workflow.json  update_docx2.py  update_docx3.py  大作业报告_ImageNodeEditor.docx
.claude/: settings.local.json
main/: main.cpp  main.vcxproj  main.vcxproj.filters
main/algorithms/: ImageAlgorithm.cpp  ImageAlgorithm.h
main/cli/: CommandLineRunner.cpp  CommandLineRunner.h
main/core/: DataType.h  Node.cpp  Node.h  NodeRegistry.cpp  NodeRegistry.h  Port.h
main/engine/: DataPacket.cpp  DataPacket.h  WorkflowEngine.cpp  WorkflowEngine.h
main/gui/: ConnectionGraphicsItem.cpp  ConnectionGraphicsItem.h  LogPanel.cpp  LogPanel.h  MainWindow.cpp  MainWindow.h  NodeGraphicsItem.cpp  NodeGraphicsItem.h  NodeListPanel.cpp  NodeListPanel.h  NodeScene.cpp  NodeScene.h  NodeView.cpp  NodeView.h  PortGraphicsItem.cpp  PortGraphicsItem.h  PreviewDialog.cpp  PreviewDialog.h  PropertyPanel.cpp  PropertyPanel.h
main/io/: WorkflowSerializer.cpp  WorkflowSerializer.h
main/nodes/: AutoEnhanceNode.cpp  AutoEnhanceNode.h  BrightnessContrastNode.cpp  BrightnessContrastNode.h  CartoonNode.cpp  CartoonNode.h  ChannelMergeNode.cpp  ChannelMergeNode.h  ChannelSplitNode.cpp  ChannelSplitNode.h  ClarityNode.cpp  ClarityNode.h  ColorTemperatureNode.cpp  ColorTemperatureNode.h  ComicStyleNode.cpp  ComicStyleNode.h  CropNode.cpp  CropNode.h  EdgeDetectionNode.cpp  EdgeDetectionNode.h  ExposureNode.cpp  ExposureNode.h  FadeNode.cpp  FadeNode.h  GammaNode.cpp  GammaNode.h  GaussianBlurNode.cpp  GaussianBlurNode.h  GradientMapNode.cpp  GradientMapNode.h  GrayscaleNode.cpp  GrayscaleNode.h  HighlightsShadowsNode.cpp  HighlightsShadowsNode.h  HueShiftNode.cpp  HueShiftNode.h  ImageInputNode.cpp  ImageInputNode.h  ImageOutputNode.cpp  ImageOutputNode.h  (+40 more)
test_batch/: workflow.json
